--- a/index_en.html
+++ b/index_en.html
@@ -7,6 +7,26 @@
   <style>
 
     body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        max-width: 800px;
+        margin: auto;
+        text-align: center;
+    }
+    h1, h2, p {
+        text-align: center;
+    }
+    ul, ol {
+        display: inline-block;
+        text-align: left;
+    }
+
+
+    body {
         text-align: center;
         font-family: Arial, sans-serif;
         max-width: 800px;
