--- a/index_ru.html
+++ b/index_ru.html
@@ -13,8 +13,13 @@
         align-items: center;
         justify-content: center;
         min-height: 100vh;
+        max-width: 100%;
+        margin: 0;
+        padding: 20px;
+        text-align: center;
+    }
+    .content {
         max-width: 800px;
-        margin: auto;
         text-align: center;
     }
     h1, h2, p {
@@ -49,6 +54,7 @@
   </style>
 </head>
 <body>
+<div class='content'>
   <h1>Руководство по работе с ботом копи‑симуляции</h1>
   <p>В данном руководстве описывается, как пользоваться ботом копи‑симуляции через Telegram. Бот позволяет:</p>
   <ul>
@@ -121,5 +127,6 @@ TokenId: bnycDW9avjX8cwnvvkfjJntkv5GTfp7ETjRg6G7pump ROIw: -4.83 PnLw: -0.50 SOL
 TokenId: J4NV8RNU1PBy8MNKj6KHkjQMvRCSJQCjgzrJ1XT3wXT7 ROIw: -4.83 PnLw: -0.50 SOL, Buys: 1, Sells: 2
 TokenId: 2Xq6KJS2VK6JCv5ELG24nA6sSAnAVfDauddfgGC2yh9o ROIw: -4.83 PnLw: -0.50 SOL, Buys: 1, Sells: 2
   </pre>
+</div>
 </body>
 </html>
