--- a/index_ru.html
+++ b/index_ru.html
@@ -9,18 +9,21 @@
     body {
         font-family: Arial, sans-serif;
         display: flex;
-        flex-direction: column;
-        align-items: center;
         justify-content: center;
+        align-items: center;
         min-height: 100vh;
-        max-width: 100%;
         margin: 0;
         padding: 20px;
-        text-align: center;
+        background-color: #ffffff;
     }
-    .content {
+    .container {
         max-width: 800px;
         text-align: center;
+        margin: auto;
+        background: white;
+        padding: 20px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
     }
     h1, h2, p {
         text-align: center;
@@ -54,7 +57,7 @@
   </style>
 </head>
 <body>
-<div class='content'>
+<div class='container'>
   <h1>Руководство по работе с ботом копи‑симуляции</h1>
   <p>В данном руководстве описывается, как пользоваться ботом копи‑симуляции через Telegram. Бот позволяет:</p>
   <ul>
