--- a/index_en.html
+++ b/index_en.html
@@ -9,18 +9,21 @@
     body {
         font-family: Arial, sans-serif;
         display: flex;
-        flex-direction: column;
-        align-items: center;
         justify-content: center;
+        align-items: center;
         min-height: 100vh;
-        max-width: 100%;
         margin: 0;
         padding: 20px;
-        text-align: center;
+        background-color: #ffffff;
     }
-    .content {
+    .container {
         max-width: 800px;
         text-align: center;
+        margin: auto;
+        background: white;
+        padding: 20px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
     }
     h1, h2, p {
         text-align: center;
@@ -54,7 +57,7 @@
   </style>
 </head>
 <body>
-<div class='content'>
+<div class='container'>
   <h1>User Guide for the Copy Simulation Bot</h1>
   <p>This guide explains how to use the copy simulation bot via Telegram. The bot allows you to:</p>
   <ul>
