--- a/index_en.html
+++ b/index_en.html
@@ -8,9 +8,8 @@
 
     body {
         font-family: Arial, sans-serif;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display: grid;
+        place-items: center;
         min-height: 100vh;
         margin: 0;
         padding: 20px;
@@ -19,7 +18,6 @@
     .container {
         max-width: 800px;
         text-align: center;
-        margin: auto;
         background: white;
         padding: 20px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
