--- a/index_ru.html
+++ b/index_ru.html
@@ -6,16 +6,18 @@
   <title>Инструкции по работе с ботом копи‑симуляции</title>
   <style>
 
-    body {
-        font-family: Arial, sans-serif;
-        display: grid;
-        place-items: center;
-        min-height: 100vh;
+    html, body {
+        height: 100%;
         margin: 0;
-        padding: 20px;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: Arial, sans-serif;
         background-color: #ffffff;
     }
     .container {
+        width: 60%;
         max-width: 800px;
         text-align: center;
         background: white;
