--- a/index_ru.html
+++ b/index_ru.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Инструкции по работе с ботом копи‑симуляции</title>
+  <title>Руководство по работе с ботом копи‑симуляции</title>
   <style>
-
     html, body {
         margin: 0;
         padding: 0;
@@ -14,7 +13,7 @@
         display: flex !important;
         justify-content: center !important;
         align-items: center !important;
-        min-height: 100vh !important; /* Полная высота экрана */
+        min-height: 100vh !important;
     }
     .container {
         width: 60% !important;
@@ -24,7 +23,7 @@
         padding: 20px !important;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1) !important;
         border-radius: 10px !important;
-        margin: auto !important; /* Центрирование */
+        margin: auto !important;
     }
     h1, h2, p {
         text-align: center !important;
@@ -33,22 +32,6 @@
         display: inline-block !important;
         text-align: left !important;
     }
-
-
-    body {
-        text-align: center;
-        font-family: Arial, sans-serif;
-        max-width: 800px;
-        margin: auto;
-    }
-    h1 {
-        margin-top: 20px;
-    }
-    ul {
-        display: inline-block;
-        text-align: left;
-    }
-
     body { font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; }
     h1 { color: #333; }
     h2 { color: #555; }
@@ -63,8 +46,8 @@
   <p>В данном руководстве описывается, как пользоваться ботом копи‑симуляции через Telegram. Бот позволяет:</p>
   <ul>
     <li>Загружать сделки кошелька.</li>
-    <li>Настраивать параметры, такие как комиссия торгового бота, сумма покупки, tip и т.д.</li>
-    <li>Проводить симуляцию операций, полностью повторяя действия кошелька.</li>
+    <li>Настраивать параметры, такие как комиссия, сумма покупки, tip и т.д.</li>
+    <li>Проводить симуляцию операций, полностью повторяя действия кошелька или с применением вашей стратегии.</li>
     <li>Получать итоговый отчёт симуляции с подробной информацией по каждому токену.</li>
   </ul>
   
@@ -77,60 +60,66 @@
   <p>После выбора языка бот отправит приветственное сообщение и отобразит главное меню.</p>
   
   <h2>2. Главное меню</h2>
-  <p>Главное меню предоставляет следующие кнопки:</p>
+  <p>Главное меню предоставляет следующие кнопки (каждая на отдельном ряду):</p>
   <ul>
-    <li><strong>⚙️ Параметры / Settings</strong> – для настройки комиссий, суммы покупки, tip и прочего.</li>
-    <li><strong>📊 Симуляция копи‑кошелька / Copy wallet simulation</strong> – для загрузки сделок и запуска симуляции.</li>
+    <li><strong>⚙️ Параметры</strong> – для настройки комиссий, суммы покупки, tip и прочего.</li>
+    <li><strong>🧩 Стратегия</strong> – для выбора и настройки стратегии симуляции.</li>
+    <li><strong>📊 Симуляция копи‑кошелька</strong> – для загрузки сделок и запуска симуляции.</li>
   </ul>
   
   <h2>3. Настройка параметров</h2>
-  <p>Нажмите кнопку <strong>Параметры / Settings</strong>, чтобы задать параметры:</p>
+  <p>Нажмите кнопку <strong>Параметры</strong>, чтобы задать необходимые параметры. В интерфейсе настройки можно изменить:</p>
   <ul>
     <li><strong>Fee (в SOL):</strong> комиссия за каждую операцию.</li>
     <li><strong>Tip (в SOL):</strong> дополнительный сбор за каждую операцию.</li>
-    <li><strong>Комиссия торгового бота (в %):</strong> комиссия, применяемая только при покупке.</li>
-    <li><strong>Сумма покупки (в SOL):</strong> сумма, на которую будет симулироваться покупка.</li>
+    <li><strong>Комиссия торгового бота (в %):</strong> комиссия, применяемая при покупке.</li>
+    <li><strong>Сумма покупки (в SOL):</strong> сумма, на которую симулируется покупка.</li>
   </ul>
   <p>После обновления параметров бот отобразит текущие настройки.</p>
   
-  <h2>4. Загрузка сделок</h2>
+  <h2>4. Выбор стратегии</h2>
+  <p>Нажмите кнопку <strong>🧩 Стратегия</strong> из главного меню, чтобы выбрать режим симуляции:</p>
+  <ul>
+    <li><strong>🔄 Полный повтор сделок</strong> – бот будет симулировать операции кошелька точно так, как они были выполнены.</li>
+    <li><strong>🛠 Личная стратегия</strong> – вы можете создавать, редактировать и удалять отдельные ордера (например, ордера Take Profit и Stop Loss). В режиме личной стратегии:
+      <ul>
+        <li>Нажав <strong>Создать ордер</strong>, вы выбираете тип ордера и вводите его параметры.</li>
+        <li>Ваши ордера отображаются в сообщении «Ваша стратегия:», где для каждого ордера предусмотрены кнопки для редактирования или удаления.</li>
+        <li>Кнопка <strong>Назад</strong> возвращает вас в меню выбора стратегии.</li>
+      </ul>
+    </li>
+  </ul>
+  
+  <h2>5. Загрузка сделок</h2>
   <ol>
-    <li>Нажмите кнопку <strong>Симуляция копи‑кошелька / Copy wallet simulation</strong>.</li>
+    <li>Нажмите кнопку <strong>Симуляция копи‑кошелька</strong>.</li>
     <li>Введите адрес кошелька.</li>
     <li>Выберите период загрузки сделок (например, 1 день, 1 неделя, 1 месяц или задайте свой период).</li>
     <li>Бот загрузит сделки с использованием пагинации (по 100 записей за запрос) и отфильтрует их по выбранному периоду.</li>
-    <li>После загрузки сделок вы получите сообщение вида: <em>✅ Получено 25 сделок за выбранный период.</em></li>
+    <li>После загрузки вы получите сообщение вида: <em>✅ Получено 25 сделок за выбранный период.</em></li>
   </ol>
   
-  <h2>5. Симуляция операций</h2>
-  <p>После загрузки сделок нажмите кнопку <strong>Совершить симуляцию / Start simulation</strong>. Бот:</p>
+  <h2>6. Симуляция операций</h2>
+  <p>После загрузки сделок нажмите кнопку <strong>Совершить симуляцию</strong>. Бот:</p>
   <ul>
     <li>Выводит сообщение о запуске симуляции.</li>
-    <li>Полностью повторяет операции кошелька (покупки и продажи) в том же порядке и с теми же пропорциями, что и в оригинале.</li>
-    <li>Для каждой операции рассчитывает цену покупки или продажи по историческим данным.</li>
-    <li>Симуляция проводится с учетом заданных настроек (сумма покупки, комиссии и tip).</li>
-    <li>Итоговый результат рассчитывается для каждого токена и включает показатели ROI, PnL, а также количество покупок и продаж.</li>
+    <li>Повторяет операции кошелька (покупки и продажи) в том же порядке и с теми же пропорциями, либо применяет вашу пользовательскую стратегию.</li>
+    <li>Рассчитывает цену покупки или продажи для каждой операции по историческим данным.</li>
+    <li>Симуляция проводится с учетом заданных настроек (сумма покупки, комиссии, tip и т.д.).</li>
+    <li>Для каждого токена рассчитываются показатели ROI, PnL, а также количество покупок и продаж.</li>
   </ul>
   
-  <h2>6. Получение отчёта</h2>
+  <h2>7. Получение отчёта</h2>
   <p>После завершения симуляции бот отправит итоговое сообщение с кнопками:</p>
   <ul>
-    <li><strong>📄 Получить детальный отчёт / Get detailed report</strong> – при нажатии бот отправит текстовый файл с полным отчётом, включающим:</li>
-    <ul>
-      <li>WalletId</li>
-      <li>Для каждого токена: TokenId, ROI, PnL, количество покупок и продаж</li>
-    </ul>
-    <li><strong>🏠 Главное меню / Main Menu</strong> – для возврата в главное меню.</li>
+    <li><strong>📄 Получить детальный отчёт</strong> – при нажатии бот отправит текстовый файл с полным отчётом, содержащим:
+      <ul>
+        <li>WalletId</li>
+        <li>Для каждого токена: TokenId, ROI, PnL, количество покупок и продаж</li>
+      </ul>
+    </li>
+    <li><strong>🏠 Главное меню</strong> – для возврата в главное меню.</li>
   </ul>
-  <p>Пример итогового отчёта:</p>
-  <pre>
-WalletId: 6rx3LXXTBjfrEvcXPLQPXqLTML5DwH6BU3Gv82Do6GhL
-------------------------------------------------------------------------
-TokenId: 9QUYvUGiqCALxrMCyJrVYXtJSpt4BYzPRv5ZRjsdqzkh ROIw: -4.83 PnLw: -0.50 SOL, Buys: 1, Sells: 2
-TokenId: bnycDW9avjX8cwnvvkfjJntkv5GTfp7ETjRg6G7pump ROIw: -4.83 PnLw: -0.50 SOL, Buys: 1, Sells: 2
-TokenId: J4NV8RNU1PBy8MNKj6KHkjQMvRCSJQCjgzrJ1XT3wXT7 ROIw: -4.83 PnLw: -0.50 SOL, Buys: 1, Sells: 2
-TokenId: 2Xq6KJS2VK6JCv5ELG24nA6sSAnAVfDauddfgGC2yh9o ROIw: -4.83 PnLw: -0.50 SOL, Buys: 1, Sells: 2
-  </pre>
 </div>
 </body>
 </html>
