--- a/index_ru.html
+++ b/index_ru.html
@@ -80,7 +80,12 @@
   <h2>4. Выбор стратегии</h2>
   <p>Нажмите кнопку <strong>🧩 Стратегия</strong> из главного меню, чтобы выбрать режим симуляции:</p>
   <ul>
-    <li><strong>🔄 Полный повтор сделок</strong> – бот будет симулировать операции кошелька точно так, как они были выполнены.</li>
+    <li><strong>🔄 Полный повтор сделок</strong> – бот будет симулировать операции кошелька точно так, как они были выполнены. В данном режиме доступны два варианта:
+      <ul>
+        <li><strong>1) Полный повтор всех сделок</strong> – симуляция всех операций кошелька.</li>
+        <li><strong>2) Повтор первой покупки и всех продаж</strong> – бот будет использовать цену первой покупки для расчёта всех последующих продаж.</li>
+      </ul>
+    </li>
     <li><strong>🛠 Личная стратегия</strong> – вы можете создавать, редактировать и удалять отдельные ордера (например, ордера Take Profit и Stop Loss). В режиме личной стратегии:
       <ul>
         <li>Нажав <strong>Создать ордер</strong>, вы выбираете тип ордера и вводите его параметры.</li>
@@ -110,14 +115,9 @@
   </ul>
   
   <h2>7. Получение отчёта</h2>
-  <p>После завершения симуляции бот отправит итоговое сообщение с кнопками:</p>
+  <p>После завершения симуляции бот отправляет итоговое сообщение с кнопками:</p>
   <ul>
-    <li><strong>📄 Получить детальный отчёт</strong> – при нажатии бот отправит текстовый файл с полным отчётом, содержащим:
-      <ul>
-        <li>WalletId</li>
-        <li>Для каждого токена: TokenId, ROI, PnL, количество покупок и продаж</li>
-      </ul>
-    </li>
+    <li><strong>📄 Получить детальный отчёт</strong> – при нажатии бот отправит Excel‑файл с полным отчётом, включающим информацию по каждому токену.</li>
     <li><strong>🏠 Главное меню</strong> – для возврата в главное меню.</li>
   </ul>
 </div>
