--- a/index_en.html
+++ b/index_en.html
@@ -6,38 +6,54 @@
   <title>User Guide for the Copy Simulation Bot</title>
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif !important;
-      background-color: #ffffff !important;
-      display: flex !important;
-      justify-content: center !important;
-      align-items: center !important;
-      min-height: 100vh !important;
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif !important;
+        background-color: #ffffff !important;
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
+        min-height: 100vh !important;
     }
     .container {
-      width: 60% !important;
-      max-width: 800px !important;
-      text-align: center !important;
-      background: white !important;
-      padding: 20px !important;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1) !important;
-      border-radius: 10px !important;
-      margin: auto !important;
+        width: 60% !important;
+        max-width: 800px !important;
+        text-align: center !important;
+        background: white !important;
+        padding: 20px !important;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1) !important;
+        border-radius: 10px !important;
+        margin: auto !important;
     }
     h1, h2, p {
-      text-align: center !important;
+        text-align: center !important;
     }
     ul, ol {
-      display: inline-block !important;
-      text-align: left !important;
+        display: inline-block !important;
+        text-align: left !important;
     }
-    body { font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; }
-    h1 { color: #333; }
-    h2 { color: #555; }
-    p { margin-bottom: 10px; }
-    pre { background: #f4f4f4; padding: 10px; }
-    .separator { border-top: 1px solid #ccc; margin: 20px 0; }
+    body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+        line-height: 1.6;
+    }
+    h1 {
+        color: #333;
+    }
+    h2 {
+        color: #555;
+    }
+    p {
+        margin-bottom: 10px;
+    }
+    pre {
+        background: #f4f4f4;
+        padding: 10px;
+    }
+    .separator {
+        border-top: 1px solid #ccc;
+        margin: 20px 0;
+    }
   </style>
 </head>
 <body>
@@ -46,204 +62,79 @@
   <p>This guide explains how to use the copy simulation bot via Telegram. The bot allows you to:</p>
   <ul>
     <li>Load wallet activities.</li>
-    <li>Configure parameters such as fee, purchase amount, tip, etc.</li>
-    <li>Simulate operations either by fully replicating wallet trades or by applying your custom strategy.</li>
+    <li>Configure parameters such as fees, purchase amount, tips, etc.</li>
+    <li>Simulate operations by fully replicating the wallet's actions or by applying your own custom strategy.</li>
     <li>Receive a final simulation report with detailed information for each token.</li>
   </ul>
-  
+
   <h2>1. Choosing the Language</h2>
   <p>When you start the bot with the <code>/start</code> command, you will be prompted to choose a language:</p>
   <ul>
-    <li>Tap <strong>English</strong> for English.</li>
     <li>Tap <strong>Русский</strong> for Russian.</li>
+    <li>Tap <strong>English</strong> for English.</li>
   </ul>
   <p>After selecting your language, the bot will send a welcome message and display the main menu.</p>
-  
+
   <h2>2. Main Menu</h2>
   <p>The main menu provides the following buttons (each on a separate row):</p>
   <ul>
-    <li><strong>⚙️ Settings</strong> – to configure fees, purchase amount, tip, etc.</li>
-    <li><strong>🧩 Strategy</strong> – to select and customize the simulation strategy.</li>
-    <li><strong>📊 Copy Wallet Simulation</strong> – to load wallet activities and start simulation.</li>
+    <li><strong>⚙️ Settings</strong> – to configure fees, purchase amount, tip, and so on.</li>
+    <li><strong>🧩 Strategy</strong> – to select and configure your simulation strategy.</li>
+    <li><strong>📊 Copy wallet simulation</strong> – to load wallet activities and start the simulation.</li>
   </ul>
-  
+
   <h2>3. Configuring Parameters</h2>
-  <p>Tap the <strong>Settings</strong> button to set your parameters. In the settings interface you can change:</p>
+  <p>Tap the <strong>Settings</strong> button to set your parameters. In the settings interface, you can change:</p>
   <ul>
-    <li><strong>Fee (in SOL):</strong> the fee charged per operation.</li>
+    <li><strong>Fee (in SOL):</strong> a fee charged per operation.</li>
     <li><strong>Tip (in SOL):</strong> an additional charge per operation.</li>
-    <li><strong>Trading Bot Commission (in %):</strong> the commission applied on purchases.</li>
+    <li><strong>Trading Bot Commission (in %):</strong> a commission applied on each purchase.</li>
     <li><strong>Purchase Amount (in SOL):</strong> the amount used for simulating each purchase.</li>
   </ul>
   <p>After updating, the bot will display your current settings.</p>
-  
+
   <h2>4. Strategy Selection</h2>
-  <p>Tap the <strong>🧩 Strategy</strong> button from the main menu to choose your simulation mode:</p>
+  <p>Tap the <strong>🧩 Strategy</strong> button from the main menu to select the simulation mode:</p>
   <ul>
-    <li><strong>🔄 Full replication of deals</strong> – the bot will simulate the wallet’s operations exactly as they were executed. In this mode, there are two variants available:
+    <li><strong>🔄 Full replication of deals</strong> – the bot will replicate the wallet's operations exactly as they occurred. There are two variants:
       <ul>
-        <li><strong>1) Replicate ALL trades</strong> – the simulation will replicate every operation of the wallet.</li>
-        <li><strong>2) First buy + all sells</strong> – the bot will use the price from the first buy to calculate all subsequent sell operations.</li>
+        <li><strong>1) Replicate ALL trades</strong> – every buy and sell is repeated.</li>
+        <li><strong>2) First buy + all sells</strong> – the bot takes the first buy price and then simulates all subsequent sell operations.</li>
       </ul>
     </li>
-    <li><strong>🛠 Custom strategy</strong> – you can create, edit, and delete individual orders (e.g. Take Profit and Stop Loss orders). In custom strategy mode:
+    <li><strong>🛠 Custom strategy</strong> – you can create, edit, and delete individual orders (such as Take Profit or Stop Loss). In the custom strategy mode:
       <ul>
-        <li>Tapping <strong>Create order</strong> lets you choose an order type and input its parameters.</li>
-        <li>Your orders are listed in the “Your strategy:” message, where each order has buttons for editing or deletion.</li>
-        <li>A <strong>Back</strong> button returns you to the strategy selection menu.</li>
+        <li>By tapping <strong>Create order</strong>, you choose an order type and enter its parameters.</li>
+        <li>Your orders appear in the “Your strategy:” message, where each order can be edited or deleted.</li>
+        <li>The <strong>Back</strong> button returns you to the strategy selection menu.</li>
       </ul>
     </li>
   </ul>
-  
+
   <h2>5. Loading Wallet Activities</h2>
   <ol>
-    <li>Tap <strong>Copy Wallet Simulation</strong>.</li>
+    <li>Tap the <strong>Copy wallet simulation</strong> button.</li>
     <li>Enter the wallet address.</li>
-    <li>Select the period for loading activities (e.g., 1 day, 1 week, 1 month, or specify a custom period).</li>
-    <li>The bot loads activities using pagination (100 records per request) and filters them by the chosen period.</li>
-    <li>Once loaded, you will see a message like: <em>✅ Received 25 activities for the selected period.</em></li>
+    <li>Choose the period for loading activities (e.g., 1 day, 1 week, 1 month, or specify a custom period).</li>
+    <li>The bot will load activities using pagination (100 records per request) and filter them by the selected period.</li>
+    <li>Once loaded, you will see a message like: <em>✅ Received 25 deals for the selected period.</em></li>
   </ol>
-  
+
   <h2>6. Simulating Operations</h2>
-  <p>After loading the wallet activities, tap the <strong>Start Simulation</strong> button. The bot will:</p>
+  <p>After loading the deals, tap the <strong>Start simulation</strong> button. The bot will:</p>
   <ul>
-    <li>Display a message indicating that the simulation has started, along with a progress indicator.</li>
-    <li>Simulate the wallet’s operations (both buys and sells) in the same order and proportions, or apply your custom strategy if selected.</li>
+    <li>Display a message indicating that the simulation has started and show the progress in percentages.</li>
+    <li>Replicate the wallet’s operations (buys and sells) in the same order and proportions, or apply your custom strategy if selected.</li>
     <li>Calculate the purchase or sale price for each operation using historical data.</li>
-    <li>Use your configured settings (purchase amount, fee, tip, and commission) in the simulation.</li>
-    <li>Compute metrics for each token, including ROI, PnL, and the number of buy and sell operations.</li>
+    <li>Take into account your configured settings (purchase amount, fees, tip, and commission).</li>
+    <li>Calculate ROI, PnL, and the number of buys and sells for each token.</li>
   </ul>
-  
+
   <h2>7. Receiving the Report</h2>
-  <p>After the simulation, the bot sends a final message with buttons:</p>
+  <p>Once the simulation is finished, the bot will send a final message with inline buttons:</p>
   <ul>
-    <li><strong>📄 Get Detailed Report</strong> – tapping this button will send you an Excel file containing the full simulation report with detailed information for each token.</li>
-    <li><strong>🏠 Main Menu</strong> – to return to the main menu.</li>
-  </ul>
-</div>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Guide for the Copy Simulation Bot</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif !important;
-      background-color: #ffffff !important;
-      display: flex !important;
-      justify-content: center !important;
-      align-items: center !important;
-      min-height: 100vh !important;
-    }
-    .container {
-      width: 60% !important;
-      max-width: 800px !important;
-      text-align: center !important;
-      background: white !important;
-      padding: 20px !important;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1) !important;
-      border-radius: 10px !important;
-      margin: auto !important;
-    }
-    h1, h2, p {
-      text-align: center !important;
-    }
-    ul, ol {
-      display: inline-block !important;
-      text-align: left !important;
-    }
-    body { font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; }
-    h1 { color: #333; }
-    h2 { color: #555; }
-    p { margin-bottom: 10px; }
-    pre { background: #f4f4f4; padding: 10px; }
-    .separator { border-top: 1px solid #ccc; margin: 20px 0; }
-  </style>
-</head>
-<body>
-<div class="container">
-  <h1>User Guide for the Copy Simulation Bot</h1>
-  <p>This guide explains how to use the copy simulation bot via Telegram. The bot allows you to:</p>
-  <ul>
-    <li>Load wallet activities.</li>
-    <li>Configure parameters such as fee, purchase amount, tip, etc.</li>
-    <li>Simulate operations either by fully replicating wallet trades or by applying your custom strategy.</li>
-    <li>Receive a final simulation report with detailed information for each token.</li>
-  </ul>
-  
-  <h2>1. Choosing the Language</h2>
-  <p>When you start the bot with the <code>/start</code> command, you will be prompted to choose a language:</p>
-  <ul>
-    <li>Tap <strong>English</strong> for English.</li>
-    <li>Tap <strong>Русский</strong> for Russian.</li>
-  </ul>
-  <p>After selecting your language, the bot will send a welcome message and display the main menu.</p>
-  
-  <h2>2. Main Menu</h2>
-  <p>The main menu provides the following buttons (each on a separate row):</p>
-  <ul>
-    <li><strong>⚙️ Settings</strong> – to configure fees, purchase amount, tip, etc.</li>
-    <li><strong>🧩 Strategy</strong> – to select and customize the simulation strategy.</li>
-    <li><strong>📊 Copy Wallet Simulation</strong> – to load wallet activities and start simulation.</li>
-  </ul>
-  
-  <h2>3. Configuring Parameters</h2>
-  <p>Tap the <strong>Settings</strong> button to set your parameters. In the settings interface you can change:</p>
-  <ul>
-    <li><strong>Fee (in SOL):</strong> the fee charged per operation.</li>
-    <li><strong>Tip (in SOL):</strong> an additional charge per operation.</li>
-    <li><strong>Trading Bot Commission (in %):</strong> the commission applied on purchases.</li>
-    <li><strong>Purchase Amount (in SOL):</strong> the amount used for simulating each purchase.</li>
-  </ul>
-  <p>After updating, the bot will display your current settings.</p>
-  
-  <h2>4. Strategy Selection</h2>
-  <p>Tap the <strong>🧩 Strategy</strong> button from the main menu to choose your simulation mode:</p>
-  <ul>
-    <li><strong>🔄 Full replication of deals</strong> – the bot will simulate the wallet’s operations exactly as they were executed. In this mode, there are two variants available:
-      <ul>
-        <li><strong>1) Replicate ALL trades</strong> – the simulation will replicate every operation of the wallet.</li>
-        <li><strong>2) First buy + all sells</strong> – the bot will use the price from the first buy to calculate all subsequent sell operations.</li>
-      </ul>
-    </li>
-    <li><strong>🛠 Custom strategy</strong> – you can create, edit, and delete individual orders (e.g. Take Profit and Stop Loss orders). In custom strategy mode:
-      <ul>
-        <li>Tapping <strong>Create order</strong> lets you choose an order type and input its parameters.</li>
-        <li>Your orders are listed in the “Your strategy:” message, where each order has buttons for editing or deletion.</li>
-        <li>A <strong>Back</strong> button returns you to the strategy selection menu.</li>
-      </ul>
-    </li>
-  </ul>
-  
-  <h2>5. Loading Wallet Activities</h2>
-  <ol>
-    <li>Tap <strong>Copy Wallet Simulation</strong>.</li>
-    <li>Enter the wallet address.</li>
-    <li>Select the period for loading activities (e.g., 1 day, 1 week, 1 month, or specify a custom period).</li>
-    <li>The bot loads activities using pagination (100 records per request) and filters them by the chosen period.</li>
-    <li>Once loaded, you will see a message like: <em>✅ Received 25 activities for the selected period.</em></li>
-  </ol>
-  
-  <h2>6. Simulating Operations</h2>
-  <p>After loading the wallet activities, tap the <strong>Start Simulation</strong> button. The bot will:</p>
-  <ul>
-    <li>Display a message indicating that the simulation has started, along with a progress indicator.</li>
-    <li>Simulate the wallet’s operations (both buys and sells) in the same order and proportions, or apply your custom strategy if selected.</li>
-    <li>Calculate the purchase or sale price for each operation using historical data.</li>
-    <li>Use your configured settings (purchase amount, fee, tip, and commission) in the simulation.</li>
-    <li>Compute metrics for each token, including ROI, PnL, and the number of buy and sell operations.</li>
-  </ul>
-  
-  <h2>7. Receiving the Report</h2>
-  <p>After the simulation, the bot sends a final message with buttons:</p>
-  <ul>
-    <li><strong>📄 Get Detailed Report</strong> – tapping this button will send you an Excel file containing the full simulation report with detailed information for each token.</li>
-    <li><strong>🏠 Main Menu</strong> – to return to the main menu.</li>
+    <li><strong>Excel simulation report</strong> – the bot will provide an Excel file containing detailed information about each token.</li>
+    <li><strong>Main Menu</strong> – to return to the main menu.</li>
   </ul>
 </div>
 </body>
